# neurovfm

./: README.md  abmil.ipynb  basic_cnn.py  coordinate.ipynb  examine_embeddings.ipynb  examine_embeddings_executed.ipynb  mil.py  projector.py  pyproject.toml  requirements.txt  training.ipynb
examples/: inference_encoder_npy.py
neurovfm/data/: __init__.py  io.py  utils.py
neurovfm/models/: abmil.ipynb  abmil_classification.ipynb  mil.py  patch_embed.py  projector.py  vit.py  vlm.py
neurovfm/pipelines/: preprocessor.py
scripts/: convert_npy_to_nifti.py  extract_embeddings.py  extract_features.py  plot_regression_results.py  regression_head.ipynb  regression_head.py  send_to_sbatch.sh  setup_venv.sh  submit_examine_embeddings.sh  submit_inference.sh  submit_train_age_regression.sh
