[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurovfm"
version = "0.1.0"
description = "NeuroVFM: generalist neuroimaging models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { file = "LICENSE" }
authors = [
  { name = "MLiNS Lab" }
]
keywords = ["neuroimaging", "medical-imaging", "deep-learning", "vision-transformers"]
dependencies = [
  "pytorch-lightning==2.5.0.post0",
  "omegaconf==2.3.0",
  "nibabel==5.3.2",
  "matplotlib==3.10.7",
  "huggingface-hub==0.34.4",
  "einops==0.8.0",
  "SimpleITK==2.4.0",
  "numpy==2.1.2",
  "pandas==2.2.3",
  "tqdm==4.66.5",
  "scipy==1.15.2",
  "scikit-learn==1.6.1",
  "positional-encodings==6.0.3",
  "outlines==1.1.1",
  "transformers>=4.37.0",
  "peft>=0.5.0",
  "timm>=0.9.0",
  "pydantic>=2.8.0",
  "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MLNeurosurg/neurovfm/"
Repository = "https://github.com/MLNeurosurg/neurovfm/"

[project.scripts]
neurovfm-train = "neurovfm.train.train:main"

[project.optional-dependencies]
dev = [
  "pytest==9.0.1",
]

[tool.setuptools.packages.find]
include = ["neurovfm*"]
exclude = ["tests*"]